BUG#19055: There may exist a SEL_TREE objects with type==KEY and keys[i]==NULL for any i. (for example, such objects can be returned from get_mm_parts() for "string_field = int_val). Make find_used_partitions_imerge() to handle such SEL_TREE objects.